k8s/monte-carlo-sim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: montecarlosim-deployment
  namespace: montecarlosim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: montecarlosim
  template:
    metadata:
      labels:
        app: montecarlosim
    spec:
      containers:
        - name: montecarlosim
          image: montecarlosim/montecarlosim:0.1.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
