k8s/monte-carlo-sim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: montecarlosim-service
  namespace: montecarlosim
spec:
  selector:
    app: montecarlosim
  ports:
    - port: 80
      targetPort: 5000
