k8s/monte-carlo-sim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: montecarlosim-ingress
  namespace: montecarlosim
  annotations:
    route.openshift.io/termination: "edge"
    haproxy.router.openshift.io/timeout: 10m
    haproxy.router.openshift.io/timeout-tunnel: 0s
spec:
  rules:
    - host: montecarlosimulation.apps.rhos.cm-mes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: montecarlosim-service
                port:
                  number: 80
